<resources>
    <string name="app_name">DA_Android</string>
    <string name="account">Account</string>
    <string name="account_label">Account</string>
    <string name="Scan">Quét Mã</string>
    <string name="Scan_label">Quét Mã</string>
    <string name="check">Kiểm Tra Hư Hỏng</string>
    <string name="check_label">Kiểm Tra Hư Hỏng</string>
    <string name="a1">chưa làm</string>
    <string name="a1_label">chưa làm</string>
    <string name="a2">chưa làm</string>
    <string name="a2_label">chưa làm</string>
</resources>